# OpenStudioWorkBench

./: .gitignore  .gitmodules  IDDMaterial.txt  IDDexample.txt  IDDunits.txt  README.md  \  metadata.txt  package.xml  windLoad.txt
Exported_gbXML_files/: CutCutDown-gbXML.gbXML  CutDown-gbXML.gbXML  Pilot_project_1-export.gbXML  Pilot_project_2-gbXML.gbXML  minibuilding-gbXML.gbXML  minibuilding.FCStd  testExport.gbXML
IDFinfo/: IDDnotes.txt
Sample_FC_files/: CutCutDown.FCStd  CutDown.FCStd  Pilot_project_1.20250804-160625.FCBak  Pilot_project_1.FCStd
Sample_FreeCAD_Arch_ifc/mcktimo/: sm8propc-Site.3dm  sm8propc.FCStd
Sample_gbxml_files/: AirLoop_Test.xml  DoubleSpace.txt  Pilot_project_1.gbXML  PointListTest.xml  Urban_House_MEP.gbxml  WindowType_Test.xml  YearSchedule.xml  building.xml  doubleSpace.xml  gbXMLSurfaceWindowExample.py  material_Test.xml  medium.xml  shell_Test.FCStd  shell_Test.xml  short.xml  smallbuilding.xml  spaceBoundary.xml  test.xml
Sample_gbxml_files/Sample FreeCAD files/: Pilot_project_1.FCStd
Sample_ifc_files/: Pilot_project_1.gbXML  Pilot_project_1.ifc
freecad/openStudio/: BMIclass.py  Building_Feature.py  Building_Generated.py  CampusOld.py  Campus_Feature.py  Campus_Generated.py  GbxmlExporterClass.py  IFC_gbXML_Convert.py  LXMLclass.py  MatchNames.py  ProcessGbXml.py  Space_Feature.py  Space_Generated.py  SurfaceLoop.py  XrbClass.py  __init__.py  add_gbxml.py  add_gbxml.save  baseObject.py  closedShellClass.save  commands.py  convert_IFC_gbXML.py  convert_gbXML2IDF.py  createIFcClass.py  createStructure.py  daylightControls.py  docTree_gbxml.py  editFile.py  examples.py  export.py  exportNotes.txt  exportShape.py  export_Ifc2gbXML.py  export_OpenStudio_OSM.py  export_OpenStudio_OSM.py.save  export_gbXML.py  export_gbXml.py  export_gbxml.py  gbObjects.py  gbxml_file.py  (+37 more)
genFeatures/: gOD.py  objectDialog2.py
utils/: .gen_obj_Dialog.py.swp  Building_Feature.py  Campus_Feature.py  Notes  Space_Feature.py  createClass4Elem.py  createXsdObjects.py  create_FC_objects.py  gen_obj_Dialog.py  generate.sh  generated_feature.py  lxmlParsingExamples.py  myAttempt.py  myTest.sh  parsePrintAll.py  save.py  save10.py  save2.py  save3.py  save4.py  save5.py  save6.py  save7.py  save8.py  save9.py  test.py  test.sh  testCreateClass4Elem.sh  testElements2Class.sh  testEnum.py  testEnum2.py  testParsePrintAll.sh  test_one_generate.sh  untangleTest.py  walkXSD.py  xsTypes
