<?xml version="1.0" encoding="UTF-8" standalone="no" ?>
<package format="1" xmlns="https://wiki.freecad.org/Package_Metadata">

  <name>OpenStudio_Workbench</name>

  <description>Workbench for Creating OpenStudio required data</description>

  <version>0.1.2</version>

  <date>2025-07-21</date>

  <maintainer email="ipad2@sloan-home.co.uk">Keith Sloan</maintainer>

  <license file="LICENSE">GPL-2.0</license>

  <url branch="main" type="repository">https://github.com/KeithSloan/OpenStudioWorkBench</url>

  <url type="readme">https://github.com/KeithSloan/OpenStudioWorkBench/blob/main/README.md</url>

  <icon>freecad/openStudioWorkBench/Resources/icons/openStudiologo.svg</icon>

  <content>
    <workbench>
      <freecadmin>0.19.0</freecadmin>
      <depend>lxml</depend>
      <depend>eppy</depend>
      <depend>xgbxml</depend>
      <depend>openstudio</depend>
      <icon>freecad/openStudio/Resources/icons/openStudiologo.svg</icon>
      <classname>OpenStudio_Workbench</classname>
      <subdirectory>./</subdirectory>
    </workbench>
  </content>

</package>
